--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                 <div class="footer-column social-column">
                     <ul class="social-links">
                         <li><a href="#"><i class="bi bi-instagram"></i> Instagram</a></li>
-                        <li><a href="#"><i class="bi bi-github"></i> GitHub</a></li>
+                        <li><a href="https://github.com/salesleozz"><i class="bi bi-github"></i> GitHub</a></li>
                         <li><a href="#"><i class="bi bi-facebook"></i> Facebook</a></li>
                         <li><a href="#"><i class="bi bi-linkedin"></i> LinkedIn</a></li>
                     </ul>
@@ -400,7 +400,6 @@
             </div>
             <div class="footer-column credits-column">
                 <p>&copy; 2024 Todos os direitos reservados.</p>
-                <p>Desenvolvido por RM│Dev.</p>
             </div>
         </footer>
         <!--Fim Footer-->
