--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                         <li><a href="#"><i class="bi bi-instagram"></i> Instagram</a></li>
                         <li><a href="https://github.com/salesleozz"><i class="bi bi-github"></i> GitHub</a></li>
                         <li><a href="#"><i class="bi bi-facebook"></i> Facebook</a></li>
-                        <li><a href="#"><i class="bi bi-linkedin"></i> LinkedIn</a></li>
+                        <li><a href="https://www.linkedin.com/in/salesleo/"><i class="bi bi-linkedin"></i> LinkedIn</a></li>
                     </ul>
                 </div>
             </div>
